# salient_detector_node

./: CMakeLists.txt  README.md~  package.xml  package.xml~
include/: CMakeLists.txt  CMakeLists.txt~  Saliency.cpp  Saliency.cpp~  Saliency.h  Saliency.h~  Saliency_node.cpp  Saliency_node.h
src/: salient_detection_node.cpp
