<?xml version="1.0"?>
<package>
  <name>salient_detector</name>
  <version>0.0.0</version>
  <description>
	Salient detector will run salient detection at a rate of 5 - 15 Hz. It will read an image from the spotter camera topic and simultaneously grab navigation information from the mavlink_comms/pose and mavlink_comms/twist topic. 

	The image will be used to create an 8 MP saliency map of the image. Using the saliency map the detector will be crop regions of interest by thresholding the image and filtering ROI by size.

	Next the approximate location of the target in the NED frame will be calculated and published at a rate of 5-15 hz.
</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="andrew@todo.todo">andrew</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/salient_detector</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_geometry</build_depend>

  	<build_depend>message_generation</build_depend>
  	<run_depend>message_runtime</run_depend>

	
<!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
